--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --config webpack.config.js",
-    "build" : "webpack --config webpack.config.js"
+    "dev": "webpack serve --config webpack.config.js --mode=development",
+    "build": "webpack --config webpack.config.js --mode=production"
   },
   "repository": {
     "type": "git",
@@ -20,14 +20,15 @@
   },
   "homepage": "https://github.com/murmullos/WebComponents#readme",
   "devDependencies": {
+    "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
     "lit-element": "^3.1.2",
     "path": "^0.12.7",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
-  },
-  "dependencies": {
-    "dile-input": "^3.1.2"
   }
 }
